Get-task/deploy.yaml
apiVersion: apps/v1               
kind: Deployment
metadata:
  name: getdeploy
spec:
  replicas: 3
  selector:
    matchExpressions:
      - key: app
        operator: In 
        values:
        - gettask
  template:
    metadata:
      labels:
        app: gettask
    spec:
      containers:
      - name: gettaskct
        image: ashishkashyap92/gettask
        ports:
        - containerPort: 8000
